--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -402,6 +402,7 @@
    },
    "outputs": [],
    "source": [
+    "# making 5 folds, save 1 / each for the validation set\n",
     "num_folds = 5\n",
     "k_choices = [1, 3, 5, 8, 10, 12, 15, 20, 50, 100]\n",
     "\n",
@@ -414,8 +415,12 @@
     "# y_train_folds[i] is the label vector for the points in X_train_folds[i].     #\n",
     "# Hint: Look up the numpy array_split function.                                #\n",
     "################################################################################\n",
-    "X_train_folds = np.split(X_train, num_folds)\n",
-    "Y_train_folds = np.split(Y_train, num_folds)\n",
+    "size = classifier.X_train.shape[0]\n",
+    "index_size = 0;\n",
+    "for i in range(size);\n",
+    "    X_train_folds =\n",
+    "    Y_train_folds = \n",
+    "    i += size / 5\n",
     "\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             #\n",
@@ -436,8 +441,11 @@
     "# last fold as a validation set. Store the accuracies for all fold and all     #\n",
     "# values of k in the k_to_accuracies dictionary.                               #\n",
     "################################################################################\n",
-    "classifier = KNearestNeighbor()\n",
-    "classifier.train(X_train, y_train)\n",
+    "\n",
+    "for k in k_choices:\n",
+    "    nn = KNearestNeighbor(k)\n",
+    "    \n",
+    "    \n",
     "\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             #\n",
@@ -448,6 +456,25 @@
     "    for accuracy in k_to_accuracies[k]:\n",
     "        print('k = %d, accuracy = %f' % (k, accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "/Users/hannahgrossman/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
